Updated example notebook to reflect the newest changes

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -2,21 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "*** Earth Engine *** Share your feedback by taking our Annual Developer Satisfaction Survey: https://google.qualtrics.com/jfe/form/SV_doiqkQG3NJ1t8IS?source=API\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from EO_Floods.floodmap_hf import FloodMapHF\n",
     "import ee\n",
-    "ee.Initialize()"
+    "ee.Initialize()\n",
+    "from EO_Floods.floodmap import FloodMap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example workflow of EO-Floods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example of a workflow with EO-Floods. We start out with a the region of Shahdadkot city in Pakistan. This city was severly impacted by the floods of 2022. We will look for floods for the month of October. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, initialize a FloodMap object. Give the start date and end date of the period that we are interested in. The geometry should be a bounding box in the form of a list of coordinates ([xmin, ymin, xmax, ymax]). Then the name of a dataset should be given. It is also possible to use multiple datasets, this can be done by giving a list of dataset names. Lastly a provider needs to be given. For now only hydrafloods is supported."
    ]
   },
   {
@@ -25,25 +38,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Shahdadkot in Pakistan during the floods of july-october 2022\n",
-    "geometry_coordinates = [67.740187,27.712453,68.104933,28.000935] \n",
-    "start_date = \"2022-10-01\"\n",
-    "end_date = \"2022-10-3\"\n",
-    "dataset = \"Sentinel 1\""
+    "\n",
+    "floodmap = FloodMap(\n",
+    "    start_date=\"2022-10-01\",\n",
+    "    end_date=\"2022-10-30\",\n",
+    "    geometry=[67.740187,27.712453,68.104933,28.000935],\n",
+    "    datasets=\"Landsat 8\",\n",
+    "    provider=\"hydrafloods\"\n",
+    ")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "floodmap = FloodMapHF(\n",
-    "    geometry=geometry_coordinates,\n",
-    "    start_date=start_date,\n",
-    "    end_date=end_date,\n",
-    "    dataset=dataset\n",
-    "    )"
+    "The floodmap object will print information about the data that is retrieved for the given parameters. Mainly the number and dates of the images found. "
    ]
   },
   {
@@ -56,12 +65,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "floodmap.preview_data(visParams={\"min\": -25, \"max\": 0, \"bands\": [\"VV\"]}, zoom=7)"
+    "There is an option to preview the data before generating flood extents. With this option you can check whether the image covers the area of interest to a desired degree and is of a workable quality."
    ]
   },
   {
@@ -70,7 +77,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "floodmap.generate_flood_extents(initial_threshold=-16)\n"
+    "floodmap.preview_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If some images are not adequate for generating flood extents then there is the option to select the data that does suit your requirements. You can choose the start date and end date and of which dataset. Be aware that the end date is exclusive.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "floodmap.select_data(start_date=\"2022-10-07\", end_date=\"2022-10-08\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you have the right images it is time to generate the flood extents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "floodmap.generate_flood_extents()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The flood extents are not automatically plotted since this can take quit some time. You have to call plot_flood_extents() on the FloodMap object to actually plot them. "
    ]
   },
   {
@@ -81,13 +127,6 @@
    "source": [
     "floodmap.plot_flood_extents()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
