updated example notebook

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -411,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If some images are not adequate for generating flood extents then there is the option to select the data that does suit your requirements. You can choose the start date and end date and of which dataset. Be aware that the end date is exclusive.  "
+    "If some images are not adequate for generating flood extents then there is the option to select the data that does suit your requirements. You can choose the start date and end date and which dataset to use. Be aware that the end date is exclusive.  "
    ]
   },
   {
