added generic data checker

--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -83,10 +83,8 @@
     "\n",
     "floodmap = FloodMap(\n",
     "    start_date=\"2022-10-01\",\n",
-    "    end_date=\"2022-10-30\",\n",
+    "    end_date=\"2022-10-15\",\n",
     "    geometry=[67.740187,27.712453,68.104933,28.000935],\n",
-    "    # datasets=\"Landsat 8\",\n",
-    "    # provider=\"hydrafloods\"\n",
     ")\n"
    ]
   },
@@ -150,26 +148,88 @@
      ]
     },
     {
-     "ename": "EEException",
-     "evalue": "Collection.reduceColumns: Error in map(ID=2022_10_03):\nImage.reduceRegion: Provide 'geometry' parameter when aggregating over an unbounded image.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\jong\\AppData\\Local\\miniconda3\\envs\\EO-Floods\\Lib\\site-packages\\ee\\data.py:402\u001b[0m, in \u001b[0;36m_execute_cloud_call\u001b[1;34m(call, num_retries)\u001b[0m\n\u001b[0;32m    401\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 402\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcall\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_retries\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_retries\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    403\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m googleapiclient\u001b[38;5;241m.\u001b[39merrors\u001b[38;5;241m.\u001b[39mHttpError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "File \u001b[1;32mc:\\Users\\jong\\AppData\\Local\\miniconda3\\envs\\EO-Floods\\Lib\\site-packages\\googleapiclient\\_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    129\u001b[0m         logger\u001b[38;5;241m.\u001b[39mwarning(message)\n\u001b[1;32m--> 130\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mwrapped\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\jong\\AppData\\Local\\miniconda3\\envs\\EO-Floods\\Lib\\site-packages\\googleapiclient\\http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[1;34m(self, http, num_retries)\u001b[0m\n\u001b[0;32m    937\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mstatus \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m300\u001b[39m:\n\u001b[1;32m--> 938\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HttpError(resp, content, uri\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muri)\n\u001b[0;32m    939\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[1;31mHttpError\u001b[0m: <HttpError 400 when requesting https://earthengine.googleapis.com/v1/projects/earthengine-legacy/value:compute?prettyPrint=false&alt=json returned \"Collection.reduceColumns: Error in map(ID=2022_10_03):\nImage.reduceRegion: Provide 'geometry' parameter when aggregating over an unbounded image.\". Details: \"Collection.reduceColumns: Error in map(ID=2022_10_03):\nImage.reduceRegion: Provide 'geometry' parameter when aggregating over an unbounded image.\">",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mEEException\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfloodmap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mavailable_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\repos\\EO-floods\\EO_Floods\\floodmap.py:88\u001b[0m, in \u001b[0;36mFloodMap.available_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Returns information of the chosen datasets for the given temporal and\u001b[39;00m\n\u001b[0;32m     73\u001b[0m \u001b[38;5;124;03mspatial resolution. The information contains the dataset name, the number\u001b[39;00m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;124;03mof images, and the timestamp of the images.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;124;03m    List of dictionaries describing the data\u001b[39;00m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     82\u001b[0m hf \u001b[38;5;241m=\u001b[39m HydraFloods(\n\u001b[0;32m     83\u001b[0m     geometry\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgeometry,\n\u001b[0;32m     84\u001b[0m     datasets\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdatasets,\n\u001b[0;32m     85\u001b[0m     start_date\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart_date,\n\u001b[0;32m     86\u001b[0m     end_date\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mend_date,\n\u001b[0;32m     87\u001b[0m )\n\u001b[1;32m---> 88\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mhf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minfo\u001b[49m\n",
-      "File \u001b[1;32m~\\repos\\EO-floods\\EO_Floods\\providers\\hydrafloods.py:71\u001b[0m, in \u001b[0;36mHydraFloods.info\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     69\u001b[0m     dataset_info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDates\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m dataset\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39mdates\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n_images \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 71\u001b[0m         dataset_info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQA_score\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_calc_quality_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     72\u001b[0m     datasets[dataset\u001b[38;5;241m.\u001b[39mname] \u001b[38;5;241m=\u001b[39m dataset_info\n\u001b[0;32m     73\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m dataset_info\n",
-      "File \u001b[1;32m~\\repos\\EO-floods\\EO_Floods\\providers\\hydrafloods.py:407\u001b[0m, in \u001b[0;36mHydraFloodsDataset._calc_quality_score\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    405\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_calc_quality_score\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[\u001b[38;5;28mfloat\u001b[39m]:\n\u001b[0;32m    406\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39mapply_func(func\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m x: calc_quality_score(x, band\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mqa_band, geom\u001b[38;5;241m=\u001b[39mx\u001b[38;5;241m.\u001b[39mgeometry()), inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m--> 407\u001b[0m     qa_score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maggregate_array\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mqa_score\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetInfo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    408\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [\u001b[38;5;28mround\u001b[39m(score,\u001b[38;5;241m2\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m score \u001b[38;5;129;01min\u001b[39;00m qa_score]\n",
-      "File \u001b[1;32mc:\\Users\\jong\\AppData\\Local\\miniconda3\\envs\\EO-Floods\\Lib\\site-packages\\ee\\computedobject.py:107\u001b[0m, in \u001b[0;36mComputedObject.getInfo\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgetInfo\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Optional[Any]:\n\u001b[0;32m    102\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124;03m\"\"\"Fetch and return information about this object.\u001b[39;00m\n\u001b[0;32m    103\u001b[0m \n\u001b[0;32m    104\u001b[0m \u001b[38;5;124;03m  Returns:\u001b[39;00m\n\u001b[0;32m    105\u001b[0m \u001b[38;5;124;03m    The object can evaluate to anything.\u001b[39;00m\n\u001b[0;32m    106\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n\u001b[1;32m--> 107\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcomputeValue\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\jong\\AppData\\Local\\miniconda3\\envs\\EO-Floods\\Lib\\site-packages\\ee\\data.py:1107\u001b[0m, in \u001b[0;36mcomputeValue\u001b[1;34m(obj)\u001b[0m\n\u001b[0;32m   1104\u001b[0m body \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexpression\u001b[39m\u001b[38;5;124m'\u001b[39m: serializer\u001b[38;5;241m.\u001b[39mencode(obj, for_cloud_api\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)}\n\u001b[0;32m   1105\u001b[0m _maybe_populate_workload_tag(body)\n\u001b[1;32m-> 1107\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_execute_cloud_call\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1108\u001b[0m \u001b[43m    \u001b[49m\u001b[43m_get_cloud_projects\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1109\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalue\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1110\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbody\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbody\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_get_projects_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprettyPrint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m   1111\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresult\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\jong\\AppData\\Local\\miniconda3\\envs\\EO-Floods\\Lib\\site-packages\\ee\\data.py:404\u001b[0m, in \u001b[0;36m_execute_cloud_call\u001b[1;34m(call, num_retries)\u001b[0m\n\u001b[0;32m    402\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m call\u001b[38;5;241m.\u001b[39mexecute(num_retries\u001b[38;5;241m=\u001b[39mnum_retries)\n\u001b[0;32m    403\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m googleapiclient\u001b[38;5;241m.\u001b[39merrors\u001b[38;5;241m.\u001b[39mHttpError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m--> 404\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m _translate_cloud_exception(e)\n",
-      "\u001b[1;31mEEException\u001b[0m: Collection.reduceColumns: Error in map(ID=2022_10_03):\nImage.reduceRegion: Provide 'geometry' parameter when aggregating over an unbounded image."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "Dataset name: Sentinel-1\n",
+      "Number of images: 5\n",
+      "Dataset ID: COPERNICUS/S1_GRD\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-02 13:36:35.000 |               97.73 |\n",
+      "| 2022-10-05 01:25:26.000 |               98.52 |\n",
+      "| 2022-10-05 01:25:51.000 |               95.06 |\n",
+      "| 2022-10-09 13:28:25.000 |               96.49 |\n",
+      "| 2022-10-14 13:36:35.000 |               97.74 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: Sentinel-2\n",
+      "Number of images: 0\n",
+      "Dataset ID: COPERNICUS/S2_SR_HARMONIZED\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: Landsat 7\n",
+      "Number of images: 1\n",
+      "Dataset ID: LANDSAT/LE07/C02/T1_L2\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-14 04:16:23.850 |               75.23 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: Landsat 8\n",
+      "Number of images: 3\n",
+      "Dataset ID: LANDSAT/LC08/C02/T1_L2\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-07 05:56:55.083 |               99.9  |\n",
+      "| 2022-10-14 06:02:36.556 |               88.89 |\n",
+      "| 2022-10-14 06:03:00.451 |               99.77 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: VIIRS\n",
+      "Number of images: 14\n",
+      "Dataset ID: NOAA/VIIRS/001/VNP09GA\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-01 00:00:00.000 |               61.74 |\n",
+      "| 2022-10-02 00:00:00.000 |               40.63 |\n",
+      "| 2022-10-03 00:00:00.000 |               34.08 |\n",
+      "| 2022-10-04 00:00:00.000 |               52.91 |\n",
+      "| 2022-10-05 00:00:00.000 |               66.28 |\n",
+      "| 2022-10-06 00:00:00.000 |               67.97 |\n",
+      "| 2022-10-07 00:00:00.000 |               46.63 |\n",
+      "| 2022-10-08 00:00:00.000 |                0    |\n",
+      "| 2022-10-09 00:00:00.000 |               42.78 |\n",
+      "| 2022-10-10 00:00:00.000 |               60.64 |\n",
+      "| 2022-10-11 00:00:00.000 |               58.66 |\n",
+      "| 2022-10-12 00:00:00.000 |               48.95 |\n",
+      "| 2022-10-13 00:00:00.000 |               46.92 |\n",
+      "| 2022-10-14 00:00:00.000 |               42.37 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: MODIS\n",
+      "Number of images: 10\n",
+      "Dataset ID: MODIS/006/MOD09GA\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-01 00:00:00.000 |               98.78 |\n",
+      "| 2022-10-02 00:00:00.000 |              100    |\n",
+      "| 2022-10-03 00:00:00.000 |               99.98 |\n",
+      "| 2022-10-04 00:00:00.000 |               98.78 |\n",
+      "| 2022-10-05 00:00:00.000 |               99.96 |\n",
+      "| 2022-10-06 00:00:00.000 |               99.88 |\n",
+      "| 2022-10-07 00:00:00.000 |                0    |\n",
+      "| 2022-10-08 00:00:00.000 |               99.99 |\n",
+      "| 2022-10-09 00:00:00.000 |              100    |\n",
+      "| 2022-10-10 00:00:00.000 |               99.96 |\n",
+      "\n",
+      "\n"
      ]
     }
    ],
