--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -138,7 +138,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\jong\\AppData\\Local\\miniconda3\\envs\\EO-Floods\\Lib\\site-packages\\ee\\deprecation.py:202: DeprecationWarning: \n",
+      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
+      "\n",
+      "Attention required for NOAA/VIIRS/001/VNP09GA! You are using a deprecated asset.\n",
+      "To ensure continued functionality, please update it.\n",
+      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/NOAA_VIIRS_001_VNP09GA\n",
+      "\n",
+      "  warnings.warn(warning, category=DeprecationWarning)\n",
+      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
       "\n",
       "Attention required for MODIS/006/MOD09GA! You are using a deprecated asset.\n",
       "To ensure continued functionality, please update it.\n",
@@ -151,6 +158,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:googleapiclient.http:Sleeping 0.60 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 3.70 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 1.84 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 1.96 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
       "======================================================================\n",
       "Dataset name: Sentinel-1\n",
       "Number of images: 5\n",
@@ -736,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
