--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -49,15 +49,15 @@
        "                    --jp-layout-color2: #454545;\n",
        "                    background-color: #383838;\n",
        "                }\n",
-       "                    \n",
+       "\n",
        "                .geemap-dark .jupyter-button {\n",
        "                    --jp-layout-color3: #383838;\n",
        "                }\n",
-       "                \n",
+       "\n",
        "                .geemap-colab {\n",
        "                    background-color: var(--colab-primary-surface-color, white);\n",
        "                }\n",
-       "                    \n",
+       "\n",
        "                .geemap-colab .jupyter-button {\n",
        "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
        "                }\n",
@@ -83,10 +83,8 @@
     "\n",
     "floodmap = FloodMap(\n",
     "    start_date=\"2022-10-01\",\n",
-    "    end_date=\"2022-10-30\",\n",
+    "    end_date=\"2022-10-15\",\n",
     "    geometry=[67.740187,27.712453,68.104933,28.000935],\n",
-    "    datasets=\"Landsat 8\",\n",
-    "    provider=\"hydrafloods\"\n",
     ")\n"
    ]
   },
@@ -114,15 +112,15 @@
        "                    --jp-layout-color2: #454545;\n",
        "                    background-color: #383838;\n",
        "                }\n",
-       "                    \n",
+       "\n",
        "                .geemap-dark .jupyter-button {\n",
        "                    --jp-layout-color3: #383838;\n",
        "                }\n",
-       "                \n",
+       "\n",
        "                .geemap-colab {\n",
        "                    background-color: var(--colab-primary-surface-color, white);\n",
        "                }\n",
-       "                    \n",
+       "\n",
        "                .geemap-colab .jupyter-button {\n",
        "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
        "                }\n",
@@ -137,24 +135,117 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "[{'Name': 'Landsat 8',\n",
-       "  'Dataset ID': 'LANDSAT/LC08/C02/T1_L2',\n",
-       "  'Number of images': 4,\n",
-       "  'Dates': ['2022-10-07 05:56:55.083',\n",
-       "   '2022-10-23 05:56:55.960',\n",
-       "   '2022-10-14 06:02:36.556',\n",
-       "   '2022-10-14 06:03:00.451']}]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
+      "\n",
+      "Attention required for NOAA/VIIRS/001/VNP09GA! You are using a deprecated asset.\n",
+      "To ensure continued functionality, please update it.\n",
+      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/NOAA_VIIRS_001_VNP09GA\n",
+      "\n",
+      "  warnings.warn(warning, category=DeprecationWarning)\n",
+      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
+      "\n",
+      "Attention required for MODIS/006/MOD09GA! You are using a deprecated asset.\n",
+      "To ensure continued functionality, please update it.\n",
+      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/MODIS_006_MOD09GA\n",
+      "\n",
+      "  warnings.warn(warning, category=DeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:googleapiclient.http:Sleeping 0.60 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 3.70 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 1.84 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 1.96 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "======================================================================\n",
+      "Dataset name: Sentinel-1\n",
+      "Number of images: 5\n",
+      "Dataset ID: COPERNICUS/S1_GRD\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-02 13:36:35.000 |               97.73 |\n",
+      "| 2022-10-05 01:25:26.000 |               98.52 |\n",
+      "| 2022-10-05 01:25:51.000 |               95.06 |\n",
+      "| 2022-10-09 13:28:25.000 |               96.49 |\n",
+      "| 2022-10-14 13:36:35.000 |               97.74 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: Sentinel-2\n",
+      "Number of images: 0\n",
+      "Dataset ID: COPERNICUS/S2_SR_HARMONIZED\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: Landsat 7\n",
+      "Number of images: 1\n",
+      "Dataset ID: LANDSAT/LE07/C02/T1_L2\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-14 04:16:23.850 |               75.23 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: Landsat 8\n",
+      "Number of images: 3\n",
+      "Dataset ID: LANDSAT/LC08/C02/T1_L2\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-07 05:56:55.083 |               99.9  |\n",
+      "| 2022-10-14 06:02:36.556 |               88.89 |\n",
+      "| 2022-10-14 06:03:00.451 |               99.77 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: VIIRS\n",
+      "Number of images: 14\n",
+      "Dataset ID: NOAA/VIIRS/001/VNP09GA\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-01 00:00:00.000 |               61.74 |\n",
+      "| 2022-10-02 00:00:00.000 |               40.63 |\n",
+      "| 2022-10-03 00:00:00.000 |               34.08 |\n",
+      "| 2022-10-04 00:00:00.000 |               52.91 |\n",
+      "| 2022-10-05 00:00:00.000 |               66.28 |\n",
+      "| 2022-10-06 00:00:00.000 |               67.97 |\n",
+      "| 2022-10-07 00:00:00.000 |               46.63 |\n",
+      "| 2022-10-08 00:00:00.000 |                0    |\n",
+      "| 2022-10-09 00:00:00.000 |               42.78 |\n",
+      "| 2022-10-10 00:00:00.000 |               60.64 |\n",
+      "| 2022-10-11 00:00:00.000 |               58.66 |\n",
+      "| 2022-10-12 00:00:00.000 |               48.95 |\n",
+      "| 2022-10-13 00:00:00.000 |               46.92 |\n",
+      "| 2022-10-14 00:00:00.000 |               42.37 |\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset name: MODIS\n",
+      "Number of images: 10\n",
+      "Dataset ID: MODIS/006/MOD09GA\n",
+      "\n",
+      "| Timestamp               |   Quality score (%) |\n",
+      "|-------------------------+---------------------|\n",
+      "| 2022-10-01 00:00:00.000 |               98.78 |\n",
+      "| 2022-10-02 00:00:00.000 |              100    |\n",
+      "| 2022-10-03 00:00:00.000 |               99.98 |\n",
+      "| 2022-10-04 00:00:00.000 |               98.78 |\n",
+      "| 2022-10-05 00:00:00.000 |               99.96 |\n",
+      "| 2022-10-06 00:00:00.000 |               99.88 |\n",
+      "| 2022-10-07 00:00:00.000 |                0    |\n",
+      "| 2022-10-08 00:00:00.000 |               99.99 |\n",
+      "| 2022-10-09 00:00:00.000 |              100    |\n",
+      "| 2022-10-10 00:00:00.000 |               99.96 |\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "floodmap.info"
+    "floodmap.available_data()"
    ]
   },
   {
@@ -166,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
