--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_11a0ebf7133df085665da568ff89c56a {\n",
+       "                #map_86dbfc44c74439aa6b62ef905b764519 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -340,14 +340,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_11a0ebf7133df085665da568ff89c56a&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_86dbfc44c74439aa6b62ef905b764519&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_11a0ebf7133df085665da568ff89c56a = L.map(\n",
-       "                &quot;map_11a0ebf7133df085665da568ff89c56a&quot;,\n",
+       "            var map_86dbfc44c74439aa6b62ef905b764519 = L.map(\n",
+       "                &quot;map_86dbfc44c74439aa6b62ef905b764519&quot;,\n",
        "                {\n",
        "                    center: [27.856693999999997, 67.92256],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -371,18 +371,18 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_0e9683b582ccf647c5ba83b43c32b7f5 = L.tileLayer(\n",
+       "            var tile_layer_30fb13d0c779a7f2e131f34940ae48ad = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 30, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_0e9683b582ccf647c5ba83b43c32b7f5.addTo(map_11a0ebf7133df085665da568ff89c56a);\n",
+       "            tile_layer_30fb13d0c779a7f2e131f34940ae48ad.addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "        \n",
        "    \n",
        "            L.control.fullscreen(\n",
        "                {&quot;forceSeparateButton&quot;: false, &quot;position&quot;: &quot;topleft&quot;, &quot;title&quot;: &quot;Full Screen&quot;, &quot;titleCancel&quot;: &quot;Exit Full Screen&quot;}\n",
-       "            ).addTo(map_11a0ebf7133df085665da568ff89c56a);\n",
+       "            ).addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "        \n",
        "    \n",
        "            var options = {\n",
@@ -391,14 +391,14 @@
        "              edit: {},\n",
        "            }\n",
        "            // FeatureGroup is to store editable layers.\n",
-       "            var drawnItems_draw_control_43cf9ec8148fabd65417ac5ed607eb66 = new L.featureGroup().addTo(\n",
-       "                map_11a0ebf7133df085665da568ff89c56a\n",
+       "            var drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2 = new L.featureGroup().addTo(\n",
+       "                map_86dbfc44c74439aa6b62ef905b764519\n",
        "            );\n",
-       "            options.edit.featureGroup = drawnItems_draw_control_43cf9ec8148fabd65417ac5ed607eb66;\n",
-       "            var draw_control_43cf9ec8148fabd65417ac5ed607eb66 = new L.Control.Draw(\n",
+       "            options.edit.featureGroup = drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2;\n",
+       "            var draw_control_d5ced5527b0ba0d76829e6e6ccd650d2 = new L.Control.Draw(\n",
        "                options\n",
-       "            ).addTo( map_11a0ebf7133df085665da568ff89c56a );\n",
-       "            map_11a0ebf7133df085665da568ff89c56a.on(L.Draw.Event.CREATED, function(e) {\n",
+       "            ).addTo( map_86dbfc44c74439aa6b62ef905b764519 );\n",
+       "            map_86dbfc44c74439aa6b62ef905b764519.on(L.Draw.Event.CREATED, function(e) {\n",
        "                var layer = e.layer,\n",
        "                    type = e.layerType;\n",
        "                var coords = JSON.stringify(layer.toGeoJSON());\n",
@@ -406,84 +406,89 @@
        "                    alert(coords);\n",
        "                    console.log(coords);\n",
        "                });\n",
-       "                drawnItems_draw_control_43cf9ec8148fabd65417ac5ed607eb66.addLayer(layer);\n",
+       "                drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2.addLayer(layer);\n",
        "             });\n",
-       "            map_11a0ebf7133df085665da568ff89c56a.on(&#x27;draw:created&#x27;, function(e) {\n",
-       "                drawnItems_draw_control_43cf9ec8148fabd65417ac5ed607eb66.addLayer(e.layer);\n",
+       "            map_86dbfc44c74439aa6b62ef905b764519.on(&#x27;draw:created&#x27;, function(e) {\n",
+       "                drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2.addLayer(e.layer);\n",
        "            });\n",
        "            \n",
        "        \n",
        "    \n",
        "\n",
-       "            var geocoderOpts_geocoder_237fdceb39308387a9fc66a3b9bef476 = {&quot;collapsed&quot;: true, &quot;defaultMarkGeocode&quot;: true, &quot;position&quot;: &quot;topleft&quot;, &quot;provider&quot;: &quot;nominatim&quot;, &quot;providerOptions&quot;: {}, &quot;zoom&quot;: 11};\n",
+       "            var geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 = {&quot;collapsed&quot;: true, &quot;defaultMarkGeocode&quot;: true, &quot;position&quot;: &quot;topleft&quot;, &quot;provider&quot;: &quot;nominatim&quot;, &quot;providerOptions&quot;: {}, &quot;zoom&quot;: 11};\n",
        "\n",
        "            // note: geocoder name should start with lowercase\n",
-       "            var geocoderName_geocoder_237fdceb39308387a9fc66a3b9bef476 = geocoderOpts_geocoder_237fdceb39308387a9fc66a3b9bef476[&quot;provider&quot;];\n",
+       "            var geocoderName_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 = geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&quot;provider&quot;];\n",
        "\n",
-       "            var customGeocoder_geocoder_237fdceb39308387a9fc66a3b9bef476 = L.Control.Geocoder[ geocoderName_geocoder_237fdceb39308387a9fc66a3b9bef476 ](\n",
-       "                geocoderOpts_geocoder_237fdceb39308387a9fc66a3b9bef476[&#x27;providerOptions&#x27;]\n",
+       "            var customGeocoder_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 = L.Control.Geocoder[ geocoderName_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 ](\n",
+       "                geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&#x27;providerOptions&#x27;]\n",
        "            );\n",
-       "            geocoderOpts_geocoder_237fdceb39308387a9fc66a3b9bef476[&quot;geocoder&quot;] = customGeocoder_geocoder_237fdceb39308387a9fc66a3b9bef476;\n",
+       "            geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&quot;geocoder&quot;] = customGeocoder_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074;\n",
        "\n",
        "            L.Control.geocoder(\n",
-       "                geocoderOpts_geocoder_237fdceb39308387a9fc66a3b9bef476\n",
+       "                geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074\n",
        "            ).on(&#x27;markgeocode&#x27;, function(e) {\n",
-       "                var zoom = geocoderOpts_geocoder_237fdceb39308387a9fc66a3b9bef476[&#x27;zoom&#x27;] || map_11a0ebf7133df085665da568ff89c56a.getZoom();\n",
-       "                map_11a0ebf7133df085665da568ff89c56a.setView(e.geocode.center, zoom);\n",
-       "            }).addTo(map_11a0ebf7133df085665da568ff89c56a);\n",
+       "                var zoom = geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&#x27;zoom&#x27;] || map_86dbfc44c74439aa6b62ef905b764519.getZoom();\n",
+       "                map_86dbfc44c74439aa6b62ef905b764519.setView(e.geocode.center, zoom);\n",
+       "            }).addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "\n",
        "        \n",
        "    \n",
-       "            map_11a0ebf7133df085665da568ff89c56a.fitBounds(\n",
+       "            map_86dbfc44c74439aa6b62ef905b764519.fitBounds(\n",
        "                [[27.856693999999997, 67.92256], [27.856693999999997, 67.92256]],\n",
        "                {&quot;maxZoom&quot;: 8}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            var tile_layer_fcf619826e0a619b87944be890353305 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/maps/c4e4790a0cc6343b4a785a1709a491bd-6793267734ff747400f82c45b58c7b85/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_bbc52e7c313640615d88354901052b9d = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/maps/58b09ab5ac7957b8422dc6b1f0b19955-67d6710860b55aef05fe970ef76bbd96/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_fcf619826e0a619b87944be890353305.addTo(map_11a0ebf7133df085665da568ff89c56a);\n",
+       "            tile_layer_bbc52e7c313640615d88354901052b9d.addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "        \n",
        "    \n",
-       "            var layer_control_8251ca165bd42ab7ea26e58d0cdd6872_layers = {\n",
+       "            var tile_layer_ce64e21e6fdb6a5c440c95701e1b4c3e = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/maps/27a42caec9cb3aa1841f623d0eb2150f-55b49fb2c5fb346a20fbda36c8e9d774/tiles/{z}/{x}/{y}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            tile_layer_ce64e21e6fdb6a5c440c95701e1b4c3e.addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
+       "        \n",
+       "    \n",
+       "            var layer_control_6bc19a70c972e37ebc2d75fa14217275_layers = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_0e9683b582ccf647c5ba83b43c32b7f5,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_30fb13d0c779a7f2e131f34940ae48ad,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;Sentinel-1 2022-10-05&quot; : tile_layer_fcf619826e0a619b87944be890353305,\n",
+       "                    &quot;Sentinel-1 2022-10-05 01:25:51.000&quot; : tile_layer_bbc52e7c313640615d88354901052b9d,\n",
+       "                    &quot;Sentinel-1 2022-10-05 01:25:26.000&quot; : tile_layer_ce64e21e6fdb6a5c440c95701e1b4c3e,\n",
        "                },\n",
        "            };\n",
-       "            let layer_control_8251ca165bd42ab7ea26e58d0cdd6872 = L.control.layers(\n",
-       "                layer_control_8251ca165bd42ab7ea26e58d0cdd6872_layers.base_layers,\n",
-       "                layer_control_8251ca165bd42ab7ea26e58d0cdd6872_layers.overlays,\n",
+       "            let layer_control_6bc19a70c972e37ebc2d75fa14217275 = L.control.layers(\n",
+       "                layer_control_6bc19a70c972e37ebc2d75fa14217275_layers.base_layers,\n",
+       "                layer_control_6bc19a70c972e37ebc2d75fa14217275_layers.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_11a0ebf7133df085665da568ff89c56a);\n",
+       "            ).addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" width=\"100%\" height=\"600\"style=\"border:none !important;\" \"allowfullscreen\" \"webkitallowfullscreen\" \"mozallowfullscreen\"></iframe>"
       ],
       "text/plain": [
-       "<geemap.foliumap.Map at 0x7ffb4827bdd0>"
+       "<geemap.foliumap.Map at 0x7ff1a2cba8d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "floodmap.view_data(datasets=[\"Sentinel-1\"], dates=[\"2022-10-05\"])"
+    "floodmap.view_data(datasets=[\"Sentinel-1\"], dates=[\"2022-10-05 01:25:51.000\", \"2022-10-05 01:25:26.000\"])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
